炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}

/// @defgroup groupListItemState List项状态
/// @ingroup macroDefine
/// @{
enum  list_item_state_
{
	list_item_state_leave = 0,   ///<项鼠标离开状态
	list_item_state_stay = 1,    ///<项鼠标停留状态
	list_item_state_select = 2,  ///<项选择状态
};


struct listBox_item_info_i
{
	int     nUserData;  //用户绑定数据
	int     nHeight;
	int     nSelHeight;
};

XC_API HELE WINAPI XListBox_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API void WINAPI XListBox_SetDrawItemBkFlags(HELE hEle, int nFlags);

XC_API BOOL WINAPI XListBox_SetItemData(HELE hEle, int iItem, int nUserData);

XC_API int  WINAPI XListBox_GetItemData(HELE hEle, int iItem);

XC_API BOOL WINAPI XListBox_SetItemInfo(HELE hEle, int iItem, in_ listBox_item_info_i *pItem);

XC_API BOOL WINAPI XListBox_GetItemInfo(HELE hEle, int iItem, out_ listBox_item_info_i *pItem);

XC_API void WINAPI XListBox_AddItemBkBorder(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XListBox_AddItemBkFill(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XListBox_AddItemBkImage(HELE hEle, list_item_state_ nState, HIMAGE hImage);

XC_API int  WINAPI XListBox_GetItemBkInfoCount(HELE hEle);

XC_API void WINAPI XListBox_ClearItemBkInfo(HELE hEle);

XC_API BOOL WINAPI XListBox_SetSelectItem(HELE hEle, int iItem);

XC_API int  WINAPI XListBox_GetSelectItem(HELE hEle);

XC_API BOOL WINAPI XListBox_CancelSelectItem(HELE hEle, int iItem);

XC_API BOOL WINAPI XListBox_CancelSelectAll(HELE hEle);

XC_API int  WINAPI XListBox_GetSelectAll(HELE hEle, out_ int *pArray, int nArraySize);

XC_API int  WINAPI XListBox_GetSelectCount(HELE hEle);

XC_API int  WINAPI XListBox_GetItemMouseStay(HELE hEle);

XC_API BOOL WINAPI XListBox_SelectAll(HELE hEle);

XC_API void WINAPI XListBox_SetItemHeightDefault(HELE hEle, int nHeight, int nSelHeight);

XC_API void WINAPI XListBox_GetItemHeightDefault(HELE hEle, out_ int *pHeight, out_ int *pSelHeight);

XC_API int  WINAPI XListBox_GetItemIndexFromHXCGUI(HELE hEle, HXCGUI hXCGUI);

XC_API void WINAPI XListBox_SetRowSpace(HELE hEle, int nSpace);

XC_API int WINAPI  XListBox_GetRowSpace(HELE hEle);

XC_API int  WINAPI XListBox_HitTest(HELE hEle, POINT *pPt);

XC_API int  WINAPI XListBox_HitTestOffset(HELE hEle, POINT *pPt); //自动添加滚动视图偏移量
XC_API BOOL WINAPI XListBox_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);

XC_API BOOL WINAPI XListBox_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);

XC_API HXCGUI WINAPI XListBox_GetTemplateObject(HELE hEle, int iItem, int nTempItemID);

XC_API void WINAPI XListBox_EnableMultiSel(HELE hEle, BOOL bEnable);

XC_API HXCGUI WINAPI XListBox_CreateAdapter(HELE hEle);

XC_API void   WINAPI XListBox_BindAdapter(HELE hEle, HXCGUI hAdapter);

XC_API HXCGUI WINAPI XListBox_GetAdapter(HELE hEle);

XC_API void WINAPI XListBox_Sort(HELE hEle, int iColumnAdapter, BOOL bAscending);  //设置排序
XC_API void WINAPI XListBox_RefreshData(HELE hEle);

XC_API void WINAPI XListBox_RefreshItem(HELE hEle, int iItem);

XC_API HELE WINAPI XList_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API int WINAPI XList_AddColumn(HELE hEle, int width); //增加列
XC_API int WINAPI XList_InsertColumn(HELE hEle, int width, int iItem);

XC_API void WINAPI XList_EnableMultiSel(HELE hEle, BOOL bEnable);

XC_API void WINAPI XList_EnableDragChangeColumnWidth(HELE hEle, BOOL bEnable);

XC_API void WINAPI XList_EnableVScrollBarTop(HELE hEle, BOOL bTop);

XC_API void WINAPI XList_EnableItemBkFullRow(HELE hEle, BOOL bFull);

XC_API void WINAPI XList_SetSort(HELE hEle, int iColumn, int iColumnAdapter, BOOL bEnable);//设置排序
XC_API void WINAPI XList_SetDrawItemBkFlags(HELE hEle, int style);

XC_API void WINAPI XList_SetColumnWidth(HELE hEle, int iItem, int width);

XC_API void WINAPI XList_SetColumnMinWidth(HELE hEle, int iItem, int width);

XC_API void WINAPI XList_SetColumnWidthFixed(HELE hEle, int iColumn, BOOL bFixed);