炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XLayout_GetChild", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetChild(int hLayout, int index);

        [DllImport("xcgui.dll", EntryPoint = "XLayout_Draw", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Draw(int hLayout, int hDraw);

        [DllImport("xcgui.dll", EntryPoint = "Layout_SetEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Layout_SetEle(int hLayout, int hParent);


    }
    partial class XListBox
    {
        [DllImport("xcgui.dll", EntryPoint = "XListBox_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetDrawItemBkFlags", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetDrawItemBkFlags(int hEle, int nFlags);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetItemData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetItemData(int hEle, int iItem, int nUserData);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetItemData(int hEle, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetItemInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetItemInfo(int hEle, int iItem, listBox_item_info_i* pItem);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool GetItemInfo(int hEle, int iItem, listBox_item_info_i* pItem);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_AddItemBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddItemBkBorder(int hEle, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_AddItemBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddItemBkFill(int hEle, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_AddItemBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddItemBkImage(int hEle, int nState, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetItemBkInfoCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_ClearItemBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void ClearItemBkInfo(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetSelectItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetSelectItem(int hEle, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetSelectItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetSelectItem(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_CancelSelectItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool CancelSelectItem(int hEle, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_CancelSelectAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool CancelSelectAll(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetSelectAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetSelectAll(int hEle, int pArray, int nArraySize);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetSelectCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetSelectCount(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemMouseStay", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetItemMouseStay(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SelectAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SelectAll(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetItemHeightDefault", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetItemHeightDefault(int hEle, int nHeight, int nSelHeight);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemHeightDefault", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetItemHeightDefault(int hEle, int pHeight, int pSelHeight);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetItemIndexFromHXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetItemIndexFromHXCGUI(int hEle, int hXCGUI);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetRowSpace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetRowSpace(int hEle, int nSpace);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetRowSpace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetRowSpace(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_HitTest", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int HitTest(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_HitTestOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int HitTestOffset(int hEle, POINT* pPt);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetItemTemplateXML", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetItemTemplateXML(int hEle, string pXmlFile);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_SetItemTemplateXMLFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetItemTemplateXMLFromString(int hEle, string pStringXML);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetTemplateObject", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetTemplateObject(int hEle, int iItem, int nTempItemID);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_EnableMultiSel", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableMultiSel(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_CreateAdapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int CreateAdapter(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_BindAdapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void BindAdapter(int hEle, int hAdapter);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_GetAdapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetAdapter(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_Sort", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Sort(int hEle, int iColumnAdapter, bool bAscending);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_RefreshData", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RefreshData(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XListBox_RefreshItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void RefreshItem(int hEle, int iItem);
    }
    partial class XList
    {
        [DllImport("xcgui.dll", EntryPoint = "XList_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XList_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int AddColumn(int hEle, int width);

        [DllImport("xcgui.dll", EntryPoint = "XList_InsertColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int InsertColumn(int hEle, int width, int iItem);

        [DllImport("xcgui.dll", EntryPoint = "XList_EnableMultiSel", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableMultiSel(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XList_EnableDragChangeColumnWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableDragChangeColumnWidth(int hEle, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XList_EnableVScrollBarTop", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableVScrollBarTop(int hEle, bool bTop);

        [DllImport("xcgui.dll", EntryPoint = "XList_EnableItemBkFullRow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableItemBkFullRow(int hEle, bool bFull);

        [DllImport("xcgui.dll", EntryPoint = "XList_SetSort", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetSort(int hEle, int iColumn, int iColumnAdapter, bool bEnable);

        [DllImport("xcgui.dll", EntryPoint = "XList_SetDrawItemBkFlags", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetDrawItemBkFlags(int hEle, int style);

        [DllImport("xcgui.dll", EntryPoint = "XList_SetColumnWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetColumnWidth(int hEle, int iItem, int width);

        [DllImport("xcgui.dll", EntryPoint = "XList_SetColumnMinWidth", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetColumnMinWidth(int hEle, int iItem, int width);

        [DllImport("xcgui.dll", EntryPoint = "XList_SetColumnWidthFixed", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetColumnWidthFixed(int hEle, int iColumn, bool bFixed);
